syntax ="proto3";
package GRPC.proto;

service Serivce {

  rpc getShelf(ShelfSearchRequest) returns (ShelfProto);
  rpc UpdateShelf(ShelfProto) returns (ShelfProto);
  rpc getAllShelves(getAllRequest) returns (ShelvesListProto);

  rpc CreateItemType(ItemTypeCreationRequest) returns (ItemTypeProto);
  rpc ReadItemType(ItemTypeSearchRequest) returns (ItemTypeProto);

  rpc CreateItem(ItemCreation) returns (ItemProto);
  rpc ReadItem(ItemSearchRequest) returns (ItemProto);
  rpc DeleteItem(ItemSearchRequest) returns (ItemProto);

  rpc CreateUser(CreateUserRequest) returns (UserProto);
}

message ShelfProto {
  string RowNo = 1;
  string ShelfNo = 2;
  double ShelfDimX = 3;
  double ShelfDimY = 4;
  double ShelfDimZ = 5;
  repeated ItemProto ItemsOnShelf = 6;
}

message ShelfSearchRequest{
  int32 id = 1;
}

message ShelvesListProto{
  repeated ShelfProto proto =1;
}


message ItemTypeCreationRequest{
  int32 id = 1;
  double ItemDimX = 2;
  double ItemDimY = 3;
  double ItemDimZ = 4;
}

message ItemTypeSearchRequest{
  int32 id = 1;
}

message ItemTypeProto{
  int32 id = 1;
  double DimX = 2;
  double DimY = 3;
  double DimZ = 4;
}


message ItemCreation{
  int32 ItemTypeID = 1;
  int32 ShelfID = 2;
  int32 OwnerID = 3;
}

message ItemSearchRequest{
  int32 id = 1;
}

message ItemProto{
  ItemTypeProto type = 1;
  int32 UniqueID = 2;
  UserProto owner = 3;
  ShelfProto shelf = 4;
}


message CreateUserRequest{
  int32 id_user = 1;
}

message UserProto{
  int32 Id = 1;
}


message getAllRequest{

}